add reference and change the order of method

--- a/Project proposal.ipynb
+++ b/Project proposal.ipynb
@@ -74,23 +74,7 @@
     "\n",
     "`thal`: 3 = normal; 6 = fixed defect; 7 = reversable defect\n",
     "\n",
-    "`num`: diagnosis of heart disease (angiographic disease status) -- Value 0: < 50% diameter narrowing -- Value 1: > 50% diameter narrowing (in any major vessel: attributes 59 through 68 are vessels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db394480-f07e-4d12-8586-fc3022252326",
-   "metadata": {},
-   "source": [
-    "## Methods\n",
-    "\n",
-    "- Variables Used: age, sex, cp, trestbps, chol, fbs, restecg, thalach, exang, oldpeak, slope,ca, thal, num (as listed and explained at the start of the code).\n",
-    "\n",
-    "- We selected the variables based on the ones we can best understand in the context of heart disease, as well as values we felt were best connected and could be used to answer our question.\n",
-    "\n",
-    "- Using classification, we will find trends in certain sets of variables that show a high probability of heart disease by, firstly, testing the model, then using testing data to confirm the probabilities.\n",
-    "\n",
-    "- We will either use scatter plots of variables compared to each other, with the colour being the diagnosis, or boxplots (the diagnosis of heart disease vs. the variables).\n"
+    "`num`: diagnosis of heart disease (angiographic disease status) -- Value 0: < 50% diameter narrowing (Normal)-- Value 1: > 50% diameter narrowing (Abnormal)"
    ]
   },
   {
@@ -5305,6 +5289,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00041c36-2571-4966-a8e3-68baf1dc9b7e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Methods\n",
+    "\n",
+    "- Variables Used: age, sex, cp, trestbps, chol, fbs, restecg, thalach, exang, oldpeak, slope,ca, thal, num (as listed and explained at the start of the code).\n",
+    "\n",
+    "- We selected the variables based on the ones we can best understand in the context of heart disease, as well as values we felt were best connected and could be used to answer our question.\n",
+    "\n",
+    "- Using classification, we will find trends in certain sets of variables that show a high probability of heart disease by, firstly, testing the model, then using testing data to confirm the probabilities.\n",
+    "\n",
+    "- We will either use scatter plots of variables compared to each other, with the colour being the diagnosis, or boxplots (the diagnosis of heart disease vs. the variables)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "38496fac-083d-4087-b021-b571371bb842",
    "metadata": {},
    "source": [
@@ -5328,12 +5330,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c34fc72-97f8-471d-a8cb-2068e7774be6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "cec8bcd2-2703-4a6a-816c-ac8c097c846f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Reference\n",
+    "\n",
+    "Janosi,Andras, Steinbrunn,William, Pfisterer,Matthias, and Detrano,Robert. (1988). Heart Disease. UCI Machine Learning Repository. https://doi.org/10.24432/C52P4X."
+   ]
   }
  ],
  "metadata": {
