--- a/final project.ipynb
+++ b/final project.ipynb
@@ -460,10 +460,11 @@
    "outputs": [],
    "source": [
     "#split the dataset into the training dataset and testing dataset\n",
+    "# Randomly take 75% of the data in the training set\n",
     "set.seed(4567)\n",
     "cleveland_split <- initial_split(H_D_cleveland, prop = 0.75, strata = num)  \n",
     "cleveland_train <- training(cleveland_split)   \n",
-    "cleveland_test <- testing(cleveland_split)\n"
+    "cleveland_test <- testing(cleveland_split)"
    ]
   },
   {
@@ -561,6 +562,7 @@
    "source": [
     "#Build Model.1 with all the numerical variables\n",
     "set.seed(9999)\n",
+    "#Build a model to find the best K of Model.1 \n",
     "knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |>\n",
     "            set_engine(\"kknn\") |>\n",
     "            set_mode(\"classification\")\n",
@@ -570,6 +572,7 @@
     "k_vfold <- vfold_cv(cleveland_train_new, v=5, strata = num)\n",
     "k_val <- tibble(neighbors = seq(from=1, to=20))\n",
     "\n",
+    "#Fit the model to find the best K\n",
     "knn_fit <- workflow() |>\n",
     "         add_recipe(knn_recipe) |>\n",
     "         add_model(knn_spec) |>\n",
@@ -585,6 +588,7 @@
    },
    "outputs": [],
    "source": [
+    "#Creat a dataframe of K value\n",
     "k_best <- knn_fit |>\n",
     "        collect_metrics() |>\n",
     "        filter(.metric == \"accuracy\") \n",
@@ -942,6 +946,7 @@
     }
    ],
    "source": [
+    "#Creat a scatter plot with a line to select best K value\n",
     "k_best_plot_1 <- k_best |>\n",
     "                ggplot(aes(x=neighbors, y=mean))+\n",
     "                       geom_point()+\n",
@@ -1022,6 +1027,7 @@
     }
    ],
    "source": [
+    "#Build Model.1 using best K\n",
     "knn_spec_bestK_all <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 2) |>\n",
     "            set_engine(\"kknn\") |>\n",
     "            set_mode(\"classification\")\n",
@@ -1031,9 +1037,11 @@
     "        add_model(knn_spec_bestK_all) |>\n",
     "        fit(data=cleveland_train_new)\n",
     "\n",
+    "#Predict the and bind to the test data\n",
     "prediction_all <- predict(knn_fit_bestK_all, cleveland_test) |>\n",
     "                bind_cols(cleveland_test)\n",
-    "                 \n",
+    "\n",
+    "#Check the accuracy and confusion\n",
     "accuracy_all <- prediction_all |> metrics(truth=num, estimate=.pred_class) |>\n",
     "                filter(.metric == \"accuracy\")\n",
     "accuracy_all\n",
@@ -1097,9 +1105,11 @@
     }
    ],
    "source": [
+    "#Build a balncaed recipe for Model.2\n",
     "knn_recipe_balance2 <- recipe(num ~ trestbps+chol, data=cleveland_train) |>\n",
     "                    step_upsample(num, over_ratio=1, skip=FALSE) |>\n",
     "                    prep()\n",
+    "#Check whether numbers of Normal and Abnormal are same\n",
     "cleveland_train_new2 <- bake(knn_recipe_balance, cleveland_train)\n",
     "cleveland_train_new2 |>\n",
     "group_by(num) |>\n",
@@ -1115,13 +1125,13 @@
    },
    "outputs": [],
    "source": [
-    "#Two variable-trestbps + chol\n",
     "set.seed(9999)\n",
-    "\n",
+    "#Build recipe_two for Model.2 with two variable (trestbps + chol)\n",
     "knn_recipe_two <- recipe(num ~ trestbps+chol, data = cleveland_train_new2) \n",
     "                    # step_scale(all_predictors()) |>\n",
     "                    # step_center(all_predictors())\n",
     "\n",
+    "#Build a model to find best K for Model.2\n",
     "knn_fit_two <- workflow() |>\n",
     "         add_recipe(knn_recipe_two) |>\n",
     "         add_model(knn_spec) |>\n",
@@ -1137,6 +1147,7 @@
    },
    "outputs": [],
    "source": [
+    "#Fit the model to make a dataframe of K\n",
     "k_best_two <- knn_fit_two |>\n",
     "        collect_metrics() |>\n",
     "        filter(.metric == \"accuracy\") \n",
@@ -1481,6 +1492,7 @@
     }
    ],
    "source": [
+    "#Visualization of K to select the best K\n",
     "k_best_plot_2 <- k_best_two |>\n",
     "                ggplot(aes(x=neighbors, y=mean))+\n",
     "                       geom_point()+\n",
@@ -1553,18 +1565,22 @@
     }
    ],
    "source": [
+    "#Build the Model.2 with two variables using best K = 2\n",
     "knn_spec_bestK_two <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 2) |>\n",
     "            set_engine(\"kknn\") |>\n",
     "            set_mode(\"classification\")\n",
     "\n",
+    "#Fit the Model.2\n",
     "knn_fit_bestK_two <- workflow() |>\n",
     "        add_recipe(knn_recipe_two) |>\n",
     "        add_model(knn_spec_bestK_two) |>\n",
     "        fit(data=cleveland_train_new2)\n",
     "\n",
+    "#Predict and bind to the test data\n",
     "prediction_two <- predict(knn_fit_bestK_two, cleveland_test) |>\n",
     "                bind_cols(cleveland_test)\n",
-    "                 \n",
+    "\n",
+    "#Check the accuracy and confusion of Model.2\n",
     "accuracy_two <- prediction_two |> metrics(truth=num, estimate=.pred_class) |>\n",
     "                filter(.metric == \"accuracy\")\n",
     "accuracy_two\n",
@@ -1628,9 +1644,12 @@
     }
    ],
    "source": [
+    "#Build a recipe to balance the number of Normal and Abnormal\n",
     "knn_recipe_balance3 <- recipe(num ~ trestbps+chol, data=cleveland_train) |>\n",
     "                    step_upsample(num, over_ratio=1, skip=FALSE) |>\n",
     "                    prep()\n",
+    "\n",
+    "#Check whether the data is balanced\n",
     "cleveland_train_new3 <- bake(knn_recipe_balance, cleveland_train)\n",
     "cleveland_train_new3 |>\n",
     "group_by(num) |>\n",
@@ -1646,13 +1665,15 @@
    },
    "outputs": [],
    "source": [
-    "#one variable-trestbps+thalach\n",
+    "\n",
     "set.seed(9999)\n",
     "\n",
+    "#Build a recipe for Model.3 with two variables --- thalach+age\n",
     "knn_recipe_two2 <- recipe(num ~ thalach+age, data = cleveland_train_new3) |>\n",
     "                    step_scale(all_predictors()) |>\n",
     "                    step_center(all_predictors())\n",
     "\n",
+    "#Build the workflow to find the best K\n",
     "knn_fit_two2 <- workflow() |>\n",
     "         add_recipe(knn_recipe_two2) |>\n",
     "         add_model(knn_spec) |>\n",
@@ -1668,6 +1689,7 @@
    },
    "outputs": [],
    "source": [
+    "#Fit the model to find the best K\n",
     "k_best_two2 <- knn_fit_two2 |>\n",
     "        collect_metrics() |>\n",
     "        filter(.metric == \"accuracy\") "
@@ -2001,6 +2023,7 @@
     }
    ],
    "source": [
+    "#PLot the accuracy of K to select the best K\n",
     "k_best_plot_3 <- k_best_two2 |>\n",
     "                ggplot(aes(x=neighbors, y=mean))+\n",
     "                       geom_point()+\n",
@@ -2073,18 +2096,22 @@
     }
    ],
    "source": [
+    "#Build the Model.3 with two variables using Best K = 2\n",
     "knn_spec_bestK_two2 <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 2) |>\n",
     "            set_engine(\"kknn\") |>\n",
     "            set_mode(\"classification\")\n",
     "\n",
+    "#Build the workflow of Model.3 and fit to the balanced training data\n",
     "knn_fit_bestK_two2 <- workflow() |>\n",
     "        add_recipe(knn_recipe_two2) |>\n",
     "        add_model(knn_spec_bestK_two2) |>\n",
     "        fit(data=cleveland_train_new3)\n",
     "\n",
+    "#Predict using Model.3 and bind to the test data\n",
     "prediction_two2 <- predict(knn_fit_bestK_two2, cleveland_test) |>\n",
     "                bind_cols(cleveland_test)\n",
-    "                 \n",
+    "\n",
+    "#Find the accuracy and confusion of Model.3\n",
     "accuracy_two2 <- prediction_two2 |> metrics(truth=num, estimate=.pred_class) |>\n",
     "                filter(.metric == \"accuracy\")\n",
     "accuracy_two2\n",
@@ -2146,6 +2173,7 @@
     }
    ],
    "source": [
+    "#Add the majority classifier for further analysis\n",
     "diagnosis_majority <- cleveland_train |>\n",
     "group_by(num) |>\n",
     "summarize(n = n()) |>\n",
