--- a/final group project .ipynb
+++ b/final group project .ipynb
@@ -2837,21 +2837,21 @@
     "\n",
     "##### Model 2 (Resting blood pressure + Cholesterol):\n",
     "\n",
-    "Accuracy = (28 + 3) / (28 + 12 + 11 + 3) = 0.574\n",
+    "$Accuracy = (28 + 3) / (28 + 12 + 11 + 3) = 0.574$\n",
     "\n",
-    "Precision = 3 / (12 + 3) = 0.2\n",
+    "$Precision = 3 / (12 + 3) = 0.2$\n",
     "\n",
-    "Recall = 3 / (11 + 3) = 0.214\n",
+    "$Recall = 3 / (11 + 3) = 0.214$\n",
     "\n",
     "<br>\n",
     "\n",
     "##### Model 3 (Max heart rate + Age):\n",
     "\n",
-    "Accuracy = (31 + 5) / (31 + 9 + 9 + 5) = 0.667\n",
+    "$Accuracy = (31 + 5) / (31 + 9 + 9 + 5) = 0.667$\n",
     "\n",
-    "Precision = 5 / (9 + 5) = 0.357\n",
+    "$Precision = 5 / (9 + 5) = 0.357$\n",
     "\n",
-    "Recall = 5 / (9 + 5) = 0.357\n",
+    "$Recall = 5 / (9 + 5) = 0.357$\n",
     "\n"
    ]
   },
@@ -2865,7 +2865,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "From analyzing these evaluations of our models, we can also compare them relative to each other.  We can see that the model that led to Table 1 results has the highest accuracy, precision, and recall. For our data, the two key factors we should focus on are precision and recall. This is due to the accuracy including the true negative predictions, which are not our main focus. For the first model, better precision means that we can trust with more confidence that the “abnormal” prediction is truly “abnormal”. As with recall, a higher recall means that we can trust the model with more confidence that it will identify an “abnormal” result. Relatively, model 3 has a decent accuracy, but with very low precision and recall. This negative trend is taken further with model 2, where all 3 areas which suboptimal. \n",
+    "From analyzing these evaluations of our models, we can also compare them relative to each other.  We can see that the model that led to model calculation results has the highest accuracy, precision, and recall. For our data, the two key factors we should focus on are precision and recall. This is due to the accuracy including the true negative predictions, which are not our main focus. For the first model, better precision means that we can trust with more confidence that the “abnormal” prediction is truly “abnormal”. As with recall, a higher recall means that we can trust the model with more confidence that it will identify an “abnormal” result. Relatively, model 3 has a decent accuracy, but with very low precision and recall. This negative trend is taken further with model 2, where all 3 areas which suboptimal. \n",
     "\n",
     "<br>\n",
     "\n",
@@ -2885,7 +2885,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "By using boxplot, we can find out whether there are differences between Normal and Abnormal (the categorical variables). While boxplots themselves do not directly show correlations between variables, they can help in identifying variables that have similar distributions or patterns across different categories. The critical aspect to observe in a boxplot is the pronounced disparity in the distributions of the two boxes representing the categories. Such noticeable divergence in distributions suggests that the variable demonstrates distinctly different levels between the Abnorma and Normal categories. Consequently, these variables, marked by their significant distribution differences in the boxplot, can serve as pivotal predictors for the categorical variable in question. \n",
+    "By using boxplot, we can find out whether there are differences between normal and abnormal (the categorical variables). While boxplots themselves do not directly show correlations between variables, they can help in identifying variables that have similar distributions or patterns across different categories. The critical aspect to observe in a boxplot is the pronounced disparity in the distributions of the two boxes representing the categories. Such noticeable divergence in distributions suggests that the variable demonstrates distinctly different levels between the abnormal and normal categories. Consequently, these variables, marked by their significant distribution differences in the boxplot, can serve as pivotal predictors for the categorical variable in question. \n",
     "\n",
     "<br>\n",
     "\n",
